--- a/pyp.toml
+++ b/pyp.toml
@@ -27,6 +27,7 @@ shadcn = "shadcn"
 
 [project.entry-points."mkdocs.plugins"]
 "shadcn/search" = "shadcn.plugins.search:SearchPlugin"
+"shadcn/excalidraw" = "shadcn.plugins.excalidraw:ExcalidrawPlugin"
 
 [build-system]
 requires = ["hatchling"]
