--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -158,6 +158,6 @@ nav:
 
   - Tendon ✨:
     - ‎ ‎ ‎ Tendon Property : Tendon/001Property.md
-    # - ‎ ‎ ‎ Tendon Profile : Result/02_resultTable.md
+    - ‎ ‎ ‎ Tendon Profile : Tendon/002Profile.md
     # - ‎ ‎ ‎ Tendon Prestress Load : Result/03_userResultTable.md
 
