--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -36,7 +36,7 @@ plugins:
       touchNavigation: true
       loop: false
       effect: zoom
-      slide_effect: zoom
+      slide_effect: slide
       width: auto
       height: auto
       zoomable: true
