--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -176,5 +176,10 @@ nav:
     - ‎ ‎ ‎ Load Combination : Result/01_loadCombination.md
     - ‎ ‎ ‎ Result Table : Result/02_resultTable.md
     - ‎ ‎ ‎ User Defined Table : Result/03_userResultTable.md
+    - ‎ ‎ ‎ Table : Result/04_Table.md
+
+  - Utilities : Utilities/index.md
+
+  - Discussion : Comments/index.md
 
 
