--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -174,7 +174,7 @@ nav:
 
   - Results :
     - ‎ ‎ ‎ Load Combination : Result/01_loadCombination.md
-    - ‎ ‎ ‎ Result Table : Result/02_ResultTable.md
+    - ‎ ‎ ‎ Result Table : Result/02_resultTable.md
     - ‎ ‎ ‎ User Defined Table : Result/03_userResultTable.md
   
     
