--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -181,6 +181,9 @@ nav:
 
   - Utilities : Utilities/index.md
 
+  - Release Notes : Release Notes/index.md
+  - Examples : Examples/index.md
+
   - Discussion : Comments/index.md
 
 
